[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.1"
ws = "0.9.2"
env_logger = "0.6"
mio = "0.6.14"
mio-extras = "2.0"
time = "0.1.39"
url = "2.0.0"
clap = "2.31.2"
term = "0.5.1"
tokio = { version = "1.10", features = ["full"] }
